syntax = "proto3";
option go_package = "./;pb";

message Comment{
  int64 id = 1;

  int64  obj_id = 2;
  int64  user_id = 3;
  string user_name = 4;
  string user_avatar_url = 5;
  string content = 6;
  int32  status = 7;
  int32 reply_count = 8;
  int32 like_count = 9;
  int32 child_count = 10;
  int64  pub_stamp = 11;
  string pub_region = 12;

  int32 is_root = 13;
  int64  root_id = 14;
  int64 root_comment_id = 15;
  int64 reply_id = 16;
  int64 reply_comment_id = 17;
  string reply_user_name = 18;
}

